--- a/index.html
+++ b/index.html
@@ -1,68 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;800&family=Fraunces:wght@700;900&display=swap"
+		rel="stylesheet">
+
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="./index.css">
+
+	<title>Frontend Mentor | Sunnyside agency landing page</title>
+
 </head>
+
 <body>
-  About
-  Services
-  Projects
-  Contact
+	<div class="headerContainer">
+		<nav class="navbar navbar-expand-lg navbar-dark">
+			<div class="container-fluid d-flex">
+				<a class="navbar-brand" href="#">sunnyside</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link special" href="#">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<h1 class='headerText mb-5'>We are creatives</h1>
+		<img src='./images//icon-arrow-down.svg' />
+	</div>
+	<div class='contentContainer'>
+		<div class='pair pair1'>
+			<div class='content' id='div1'>
+				<h2 class='headingType1'>Transform your brand</h2>
+				<p>
+					We are a full-service creative agency specializing in helping brands grow fast.
+					Engage your clients through compelling visuals that do most of the marketing for you.
+				</p>
+				<a href="#">Learn more</a>
+			</div>
+			<div class='content' id='div2'></div>
+		</div>
+		<div class="pair pair2">
+			<div class='content' id='div3'></div>
+			<div class='content' id='div4'>
+				<h2 class='headingType1'>Stand out to the right audience</h2>
+				<p>
+					Using a collaborative formula of designers, researchers, photographers, videographers, and
+					copywriters,
+					we’ll build
+					and extend your brand in digital places.
+				</p>
+				<a href="#">Learn more</a>
+			</div>
+		</div>
+		<div class="pair pair3">
+			<div class='content' id='div5'>
+				<h3 class='headingType2'>Graphic design</h3>
+				<p>
+					Great design makes you memorable. We deliver artwork that underscores your brand message and
+					captures
+					potential
+					clients’ attention.
+				</p>
+			</div>
+			<div class='content' id='div6'>
+				<h3 class='headingType2'>Photography</h3>
+				<p>
+					Increase your credibility by getting the most stunning, high-quality photos that improve your
+					business
+					image.
+				</p>
+			</div>
+		</div>
+	</div>
 
-  We are creatives
+	<div class="testimonialsSection">
+		<h5>Client testimonials</h5>
+		<div class="testimonialsContainer">
+			<div class="testimonial">
+				<img src="./images/image-emily.jpg" />
+				<p>
+					We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were
+					always hit.
+				</p>
+				<h6>Emily R.</h6>
+				<p class="designation">Marketing Director</p>
+			</div>
+			<div class="testimonial">
+				<img src="./images/image-thomas.jpg" />
+				<p>
+					Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying
+					and
+					enjoyable
+					experience.
+				</p>
+				<h6>Thomas S.</h6>
+				<p class="designation">Chief Operating Officer</p>
+			</div>
+			<div class="testimonial">
+				<img src="./images/image-jennie.jpg" />
+				<p>
+					Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
+					recommended!
+				</p>
+				<h6>Jennie F.</h6>
+				<p class="designation">Business Owner</p>
+			</div>
+		</div>
+	</div>
 
-  Transform your brand
+	<div class="imagesSection">
+		<img src="images/mobile/image-gallery-milkbottles.jpg" />
+		<img src="images/mobile/image-gallery-orange.jpg" />
+		<img src="images/mobile/image-gallery-cone.jpg" />
+		<img src="images/mobile/image-gallery-sugar-cubes.jpg" />
+	</div>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+	<div class="contactSection">
+		<h4>sunnyside</h4>
+		<div class="words">
+			<p>About</p>
+			<p>Services</p>
+			<p>Projects</p>
+		</div>
+		<div class="icons">
+			<img src='./images/icon-facebook.svg' />
+			<img src='./images/icon-instagram.svg' />
+			<img src='./images/icon-twitter.svg' />
+			<img src='./images/icon-pinterest.svg' />
+		</div>
+	</div>
 
-  Learn more
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
