--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 		</nav>
 		<h1 class='headerText mb-5'>We are creatives</h1>
-		<img src='./images//icon-arrow-down.svg' />
+		<img src='./images/icon-arrow-down.svg' alt='arrow-down' />
 	</div>
 	<div class='contentContainer'>
 		<div class='pair pair1'>
@@ -104,7 +104,7 @@
 		<h5>Client testimonials</h5>
 		<div class="testimonialsContainer">
 			<div class="testimonial">
-				<img src="./images/image-emily.jpg" />
+				<img src="./images/image-emily.jpg" alt='emily' />
 				<p>
 					We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were
 					always hit.
@@ -113,7 +113,7 @@
 				<p class="designation">Marketing Director</p>
 			</div>
 			<div class="testimonial">
-				<img src="./images/image-thomas.jpg" />
+				<img src="./images/image-thomas.jpg" alt='thomas' />
 				<p>
 					Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying
 					and
@@ -124,7 +124,7 @@
 				<p class="designation">Chief Operating Officer</p>
 			</div>
 			<div class="testimonial">
-				<img src="./images/image-jennie.jpg" />
+				<img src="./images/image-jennie.jpg" alt='jennie' />
 				<p>
 					Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
 					recommended!
@@ -136,10 +136,10 @@
 	</div>
 
 	<div class="imagesSection">
-		<img src="images/mobile/image-gallery-milkbottles.jpg" />
-		<img src="images/mobile/image-gallery-orange.jpg" />
-		<img src="images/mobile/image-gallery-cone.jpg" />
-		<img src="images/mobile/image-gallery-sugar-cubes.jpg" />
+		<img src="images/mobile/image-gallery-milkbottles.jpg" alt='milkbottles' />
+		<img src="images/mobile/image-gallery-orange.jpg" alt='orange' />
+		<img src="images/mobile/image-gallery-cone.jpg" alt='cone' />
+		<img src="images/mobile/image-gallery-sugar-cubes.jpg" alt='sugar-cubes' />
 	</div>
 
 	<div class="contactSection">
@@ -150,10 +150,10 @@
 			<p>Projects</p>
 		</div>
 		<div class="icons">
-			<img src='./images/icon-facebook.svg' />
-			<img src='./images/icon-instagram.svg' />
-			<img src='./images/icon-twitter.svg' />
-			<img src='./images/icon-pinterest.svg' />
+			<img src='./images/icon-facebook.svg' alt='facebook' />
+			<img src='./images/icon-instagram.svg' alt='instagram' />
+			<img src='./images/icon-twitter.svg' alt='twitter' />
+			<img src='./images/icon-pinterest.svg' alt='pinterest' />
 		</div>
 	</div>
 
